--- a/Assignments/Assignment3/index.html
+++ b/Assignments/Assignment3/index.html
@@ -31,35 +31,29 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
-                        <th style="background-image: url('lights.jpg')">#</th>
+                        <th>#</th>
                         <th>First</th>
-                        <th style="background-image: url('lights.jpg')">
-                            Last
-                        </th>
+                        <th>Last</th>
                         <th>Handle</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th style="background-image: url('lights.jpg')">1</th>
+                        <th>1</th>
                         <td>Abhishek</td>
-                        <td style="background-image: url('lights.jpg')">
-                            Keshri
-                        </td>
+                        <td>Keshri</td>
                         <td>@2kabhishek</td>
                     </tr>
                     <tr>
-                        <th style="background-image: url('lights.jpg')">2</th>
+                        <th>2</th>
                         <td>John</td>
-                        <td style="background-image: url('lights.jpg')">Doe</td>
+                        <td>Doe</td>
                         <td>@jdoe</td>
                     </tr>
                     <tr>
-                        <th style="background-image: url('lights.jpg')">3</th>
+                        <th>3</th>
                         <td>Hurry</td>
-                        <td style="background-image: url('lights.jpg')">
-                            Burry
-                        </td>
+                        <td>Burry</td>
                         <td>@fast</td>
                     </tr>
                 </tbody>
