Add nav-item to dropdown

--- a/Assignments/Assignment4/index.html
+++ b/Assignments/Assignment4/index.html
@@ -33,10 +33,10 @@
                             <b class="caret"></b>
                         </a>
 
-                        <ul class="dropdown-menu">
-                            <li><a href="#">J2EE</a></li>
-                            <li><a href="#">Java 8</a></li>
-                            <li><a href="#">OpenJDK 8</a></li>
+                        <ul class="dropdown-menu nav">
+                            <li class="nav-item"><a href="#">J2EE</a></li>
+                            <li class="nav-item"><a href="#">Java 8</a></li>
+                            <li class="nav-item"><a href="#">OpenJDK 8</a></li>
                         </ul>
                     </li>
                 </ul>
